Fix fonts; make sure 'Sent Xm ago' doesn't overlap chat bubble

--- a/fb.katex.css
+++ b/fb.katex.css
@@ -5,15 +5,33 @@
   color: white;
 }
 
-#facebook .system-fonts--body div.html-div > span.katex-display {
+#facebook
+  .system-fonts--body
+  div.html-div
+  > span.katex-display
+  :where(.mop, .op-limits) {
   font-family: KaTeX_Size2; /* Perhaps this font is only appropriate for display mode */
+  /* Sometimes it's inappropriate even for display mode, apparently */
 }
+
+/* #facebook
+  .system-fonts--body
+  div.html-div
+  > span.katex-display
+  span:where(.mord, .mathnormal, .mopen, .) {
+  font-family: KaTeX_Main;
+} */
 
 #facebook
   .system-fonts--body
   div.html-div:has(> span:where(.katex, .katex-display))
   span:is(.sizing, .reset-size6, .size3, .mtight, .mord),
-#facebook .system-fonts--body div.html-div > span.katex {
+#facebook .system-fonts--body div.html-div > span.katex,
+#facebook
+  .system-fonts--body
+  div.html-div
+  > span:where(.katex, .katex-display)
+  /* :where(.mrel, .mbin) */ :not(.mop, .op-limits) {
   font-family: KaTeX_Main;
 }
 
@@ -29,4 +47,9 @@ div.html-div.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x
     > span:where(.katex)
   ) {
   padding: 13px 13px;
+}
+
+span.html-span.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x1hl2dhg.x16tdsg8.x1vvkbs.x1xf6ywa {
+  display: block;
+  padding-top: 10px;
 }
